Workaround for bug 19421 -- no menus on mac. This is a problem with brutal sharing of overlays that waterson needs to fix. For now, turn off brutal sharing of scripts. r=brendan, saari.